# ai_assistant

./:  .assistant_count_lines.py  .assistant_line_counts.json  .assistant_size_scan.json  .assistant_size_scan.py  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  analyze_defs.py  debug_steps.txt  decode_base64.py  docker-compose.yml  inspect_tasks_lines.py  marker_scan.py  pyproject.toml  repo_scan.py
.github/workflows/: ci.yml
backend/: README.md  alembic.ini  api_routes.py  app.py  app_impl.py  app_stub.py  app_wrappers.py  compat.py  croniter.py  crypto.py  database.py  llm_utils.py  models.py  node_schemas.py  requirements.txt  schemas.py  tasks.py  utils.py  wait-for-db.sh  wait_for_db.py
backend/adapters/: ollama_adapter.py  openai_adapter.py
backend/alembic/: env.py
backend/routes/: __init__.py  __pycache__  _shared.py  api.py  api_common.py  audit.py  auth.py  node.py  providers.py  providers_data.py  providers_helpers.py  providers_impl.py  runs.py  (+7 more)
docs/: ROLLING_MIGRATION_RUNLOG_EVENT_ID.md  next_steps.md
frontend/: Dockerfile  nginx.conf  package.json  vite.config.js
issues/: 002_auth_and_data_model.md  003_infra_and_run_logs.md
k8s/: backend-deployment.yaml  frontend-deployment.yaml
proxy/: README.md  nginx.conf
scripts/: apply_migrations.py  backfill_runlog_event_ids.py  check_live_llm_usage.py
specs/: CHANGELOG.md  CHANGES.md  COMBINED_SPEC.md  COMPETITOR_COMPARISON.md  IMPLEMENTATION_CHECKLIST.md  N8N_COMPATIBILITY.md  README_SPEC.md  README_SPEC_CHANGELOG_ENTRY.md
tools/: modify_templates.py  update_templates.py
(+295 files in other folders)
