[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "no_code_ai_assistant"
version = "0.1.0"
description = "Scaffolded no_code_ai_assistant"
readme = "README.md"
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90", "B", "I" ]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.10
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
